<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/brouserFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.brouser.BrouserFragment"
        android:label="@string/brouser"
        tools:layout="@layout/fragment_brouser" />
    <fragment
        android:id="@+id/dataFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.data.DataFragment"
        android:label="@string/data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/backgroundTask"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.workerBackTask.BackgroundTask"
        android:label="fragment_background_task"
        tools:layout="@layout/fragment_background_task" />
    <fragment
        android:id="@+id/compassFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.compass.CompassFragment"
        android:label="fragment_compass"
        tools:layout="@layout/fragment_compass" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.camera.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/microphoneFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.microphone.MicrophoneFragment"
        android:label="fragment_microphone"
        tools:layout="@layout/fragment_microphone" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/autorization"
        android:name="ru.mirea.zubarevaes.mireaproject.Autorization"
        android:label="activity_autorization"
        tools:layout="@layout/activity_autorization" />
    <fragment
        android:id="@+id/netFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.net.NetFragment"
        android:label="fragment_net"
        tools:layout="@layout/fragment_net" />
    <fragment
        android:id="@+id/fileFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.taskInFile.FileFragment"
        android:label="fragment_file"
        tools:layout="@layout/fragment_file" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="ru.mirea.zubarevaes.mireaproject.ui.OSMMaps.MapFragment"
        android:label="MapFragment" />
</navigation>